--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,30 @@
 @tailwind components;
 @tailwind utilities;
  
+h1 {
+  @apply scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl;
+}
+
+h2 {
+  @apply scroll-m-20 border-b pb-2 text-3xl font-semibold tracking-tight first:mt-0;
+}
+
+h3 {
+  @apply scroll-m-20 text-2xl font-semibold tracking-tight;
+}
+
+h4 {
+  @apply scroll-m-20 text-xl font-semibold tracking-tight;
+}
+
+p {
+  @apply leading-7 [&:not(:first-child)]:mt-6;
+}
+
+code {
+  @apply bg-muted relative rounded px-[0.3rem] py-[0.2rem] font-mono text-xl font-semibold
+}
+ 
 @layer base {
   :root {
     --background: 0 0% 100%;
